--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,3 @@
 MONGO_URI="mongodb+srv://explorerzeno471:AHxs9QDGNxjUAwVP@cluster0.uouqtqv.mongodb.net/mu-blogs?retryWrites=true&w=majority&appName=Cluster0"
 PORT=3000
+JWT_SECRET = "HDDUEE47e843:\\dh764fj=dire,fkgk;ug"
